@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 2.0 beta 2
+- Fixed Edit fact wrong fact if same earlier fact is deleted (sjouke)
 - Increased default memory limit to 64M (sjouke)
 - Fixed error in PinYin translation if character doesn't exist (sjouke)
 - Fixed confighelp page, print english text if other is absent (sjouke)
